--- a/index.html
+++ b/index.html
@@ -10,5 +10,18 @@
   <link rel="shortcut icon" type="image/JPG" href="./images/IGL.JPG">
   <title>Путешествие</title>
 </head>
+<body class="page">
+  <header class="header">
+    <div class="header__logo"></div>
+    <div class="header__lang-link">
+      <a class="header__lang-link_nic" href="#">Ru</a>
+      <a class="header__lang-link_nic" href="#">En</a>
+    </div>
 
+  </header>
+
+  <p>Раздел1</p>
+  <p>Раздел2</p>
+  <p>Подвал</p>
+</body>
 </html>
