--- a/index.html
+++ b/index.html
@@ -17,10 +17,55 @@
       <a class="header__lang-link_nic" href="#">Ru</a>
       <a class="header__lang-link_nic" href="#">En</a>
     </div>
-
   </header>
+  <section class="lead">
+    <div class="lead__title">
+      Путешествия по России
+    </div>
+    <div class="lead__subtitle">
+      Настоящая страна не в выпусках новостей, а здесь.
+    </div>
+    <img class="lead__image"
+         src="./images/__image.png" alt="Маршрут">
+    <div class="lead__caption">
+      ВАША ПОЛКА - ВЕРХНЯЯ
+    </div>
+  </section>
 
-  <p>Раздел1</p>
+  <section class="intro">
+    <div class="intro__title">
+      Чего мы там не видели?
+    </div>
+    <div class="intro__text">
+      По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
+      но только 36% планируют провести отпуск в родной стране. Мол,
+      чего мы тут, дома, не видели? На самом деле, Россия — это целая
+      вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана.
+      А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта
+      и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама,
+      которая взяла в охапку троих детей, усадила их в свою «Ладу» и
+      проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые
+      интересные места, достойные вашего отпуска.
+    </div>
+    <ul class="intro__list">
+      <li>
+        Часовых поясов 11
+      </li>
+      <li>
+        Объектов природного наследия ЮНЕСКО 12
+      </li>
+      <li>
+        Объектов культурного наследия ЮНЕСКО 16
+      </li>
+      <li>
+        Природных заповедников 105
+      </li>
+      <li>
+        Аэропортов 241
+      </li>
+    </ul>
+  </section>
+
   <p>Раздел2</p>
   <p>Подвал</p>
 </body>
