--- a/index.html
+++ b/index.html
@@ -19,23 +19,15 @@
     </div>
   </header>
   <section class="lead">
-    <div class="lead__title">
-      Путешествия по России
-    </div>
-    <div class="lead__subtitle">
-      Настоящая страна не в выпусках новостей, а здесь.
-    </div>
+    <h1 class="lead__title">Путешествия по России</h1>
+    <div class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</div>
     <img class="lead__image"
          src="./images/__image.png" alt="Маршрут">
-    <div class="lead__caption">
-      ВАША ПОЛКА - ВЕРХНЯЯ
-    </div>
+    <div class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</div>
   </section>
 
   <section class="intro">
-    <div class="intro__title">
-      Чего мы там не видели?
-    </div>
+    <div class="intro__title">Чего мы там не видели?</div>
     <div class="intro__text">
       По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
       но только 36% планируют провести отпуск в родной стране. Мол,
@@ -48,21 +40,11 @@
       интересные места, достойные вашего отпуска.
     </div>
     <ul class="intro__list">
-      <li>
-        Часовых поясов 11
-      </li>
-      <li>
-        Объектов природного наследия ЮНЕСКО 12
-      </li>
-      <li>
-        Объектов культурного наследия ЮНЕСКО 16
-      </li>
-      <li>
-        Природных заповедников 105
-      </li>
-      <li>
-        Аэропортов 241
-      </li>
+      <li>Часовых поясов <span class="intro__list_thin">11</span></li>
+      <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_thin">12</span></li>
+      <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_thin">16</span></li>
+      <li>Природных заповедников <span class="intro__list_thin">105</span></li>
+      <li>Аэропортов <span class="intro__list_thin">241</span></li>
     </ul>
   </section>
 
