--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1 class="lead__title">Путешествия по России</h1>
     <div class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</div>
     <img class="lead__image"
-         src="./images/__image.png" alt="Маршрут">
+         src="./images/lead-polka.jpg" alt="Маршрут">
     <div class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</div>
   </section>
 
@@ -46,6 +46,33 @@
       <li>Природных заповедников <span class="intro__list_thin">105</span></li>
       <li>Аэропортов <span class="intro__list_thin">241</span></li>
     </ul>
+  </section>
+
+  <section class="photo-grid">
+    <img class="photo-grid__item"
+         src="./images/photo-grid-train.jpg" alt="Поезд">
+    <img class="photo-grid__item"
+         src="./images/photo-grid-atharva-tulsi.jpg" alt="Асарва">
+    <img class="photo-grid__item"
+         src="./images/photo-grid-tuman.jpg" alt="Туман">
+    <img class="photo-grid__item"
+         src="./images/photo-grid-sochi.jpg" alt="Сочи">
+    <img class="photo-grid__item"
+         src="./images/photo-grid-arisa.jpg" alt="Ариса">
+    <img class="photo-grid__item"
+         src="./images/photo-grid-baikal.jpg" alt="Байкал1">
+    <img class="photo-grid__item"
+         src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
+    <img class="photo-grid__item"
+         src="./images/photo-grid-kondratiev.jpg" alt="Кондратьев">
+    <img class="photo-grid__item"
+         src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка1">
+    <img class="photo-grid__item"
+         src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка2">
+    <img class="photo-grid__item"
+         src="./images/photo-grid-baikal-2.jpg" alt="Байкал2">
+    <img class="photo-grid__item"
+         src="./images/photo-grid-ergaki.jpg" alt="Эргаки">
   </section>
 
   <p>Раздел2</p>
