--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <header class="header">
     <div class="header__logo"></div>
     <div class="header__lang-link">
-      <a class="header__lang-link_nic" href="#">Ru</a>
-      <a class="header__lang-link_nic" href="#">En</a>
+      <a class="header__nic" href="#">Ru</a>
+      <a class="header__nic" href="#">En</a>
     </div>
   </header>
   <section class="lead">
     <h1 class="lead__title">Путешествия по России</h1>
-    <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+    <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
     <img class="lead__image"
          src="./images/lead-polka.jpg" alt="Маршрут">
     <div class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</div>
@@ -73,6 +73,8 @@
          src="./images/photo-grid-baikal-2.jpg" alt="Байкал2">
     <img class="photo-grid__item"
          src="./images/photo-grid-ergaki.jpg" alt="Эргаки">
+    <!-- <img class="photo-grid__item"
+         src="./images/tst.png" alt="tst"> -->
   </section>
 
   <section class="places">
@@ -179,7 +181,7 @@
         <a class="place__link" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
       </div>
       <img class="place__image"
-          src="./images/place-karelia.jpg" alt="Карелия">
+           src="./images/place-karelia.jpg" alt="Карелия">
       <div>
         <p class="place__paragraph">
           Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
@@ -195,6 +197,22 @@
     </article>
   </section>
 
-  <p class="red-border">Подвал</p>
+  <a class="cover" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+    <div class="cover__txt">
+      <h2 class="cover__title">
+        До Байкала «на собаках»
+      </h2>
+      <h3 class="cover__subtitle">
+        По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+      </h3>
+    </div>
+    <img class="cover__background"
+         src="./images/cover-trains.jpg" alt="Обложка Байкал">
+    <div class="cover__overlay"></div>
+  </a>
+
+  <footer class="footer red-border">
+    Подвал
+  </footer>
 </body>
 </html>
