точки перехода кроме cover и footer v2

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <h2 class="place__title">Карелия</h2>
       <div class="place__vebsite">
         <p class="place__url-heading">URL</p>
-        <a class="place__link" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
+        <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
       </div>
       <img class="place__image"
            src="./images/place-karelia.jpg" alt="Карелия">
@@ -211,8 +211,8 @@
     <div class="cover__overlay"></div>
   </a>
 
-  <footer class="footer red-border">
+  <!-- <footer class="footer red-border">
     Подвал
-  </footer>
+  </footer> -->
 </body>
 </html>
