--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 </head>
 <body class="page">
   <header class="header">
-    <div class="header__logo"></div>
-    <div class="header__lang-link">
+    <section class="header__logo"></section>
+    <section class="header__lang-link">
       <a class="header__nic" href="#">Ru</a>
       <a class="header__nic" href="#">En</a>
-    </div>
+    </section>
   </header>
   <section class="lead">
     <h1 class="lead__title">Путешествия по России</h1>
     <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
     <img class="lead__image"
          src="./images/lead-polka.jpg" alt="Маршрут">
-    <div class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</div>
+    <h3 class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</h3>
   </section>
 
   <section class="intro">
@@ -80,13 +80,13 @@
   <section class="places">
     <article class="place">
       <h2 class="place__title">Куршская коса</h2>
-      <div class="place__vebsite">
+      <section class="place__vebsite">
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
-      </div>
+      </section>
       <img class="place__image"
           src="./images/place-kosa.jpg" alt="Коса">
-      <div>
+      <section>
         <p class="place__paragraph">
           Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
           спокойного Куршского залива с одной стороны и подёрнутого рябью волн
@@ -98,18 +98,18 @@
           коса, — и немецкое наследие россыпи небольших приморских городов.
           Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
         </p>
-      </div>
+      </section>
     </article>
 
     <article class="place">
       <h2 class="place__title">Кольский</h2>
-      <div class="place__vebsite">
+      <section class="place__vebsite">
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
-      </div>
+      </section>
       <img class="place__image"
           src="./images/place-kolsky.jpg" alt="Кольский">
-      <div>
+      <section>
         <p class="place__paragraph">
           Почти весь полуостров находится за Полярным кругом.
           Саамская тундра, от которой на юг — тайга, а на север —
@@ -123,18 +123,18 @@
           давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает
           сбываться с билетом в Мурманск.
         </p>
-      </div>
+      </section>
     </article>
 
     <article class="place">
       <h2 class="place__title">Алтай</h2>
-      <div class="place__vebsite">
+      <section class="place__vebsite">
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
-      </div>
+      </section>
       <img class="place__image"
           src="./images/place-altai.jpg" alt="Алтай">
-      <div>
+      <section>
         <p class="place__paragraph">
           Алтай — одно из красивейших мест в России.
           В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны,
@@ -147,18 +147,18 @@
           бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули.
           И знаменитые манулы — тоже обитатели Алтайского края.
         </p>
-      </div>
+      </section>
     </article>
 
     <article class="place">
       <h2 class="place__title">Зимний Байкал</h2>
-      <div class="place__vebsite">
+      <section class="place__vebsite">
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
-      </div>
+      </section>
       <img class="place__image"
           src="./images/place-winter-baikal.jpg" alt="Байкал">
-      <div>
+      <section>
         <p class="place__paragraph">
           Всем известен Байкал как крупнейшее озеро в мире. Многие
           также знают, что это самый большой источник пресной воды
@@ -171,18 +171,18 @@
           В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой
           рекорд — 197.011 км/ч.
         </p>
-      </div>
+      </section>
     </article>
 
     <article class="place">
       <h2 class="place__title">Карелия</h2>
-      <div class="place__vebsite">
+      <section class="place__vebsite">
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
-      </div>
+      </section>
       <img class="place__image"
            src="./images/place-karelia.jpg" alt="Карелия">
-      <div>
+      <section>
         <p class="place__paragraph">
           Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
           лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на
@@ -193,26 +193,35 @@
           А на редких тропинках деревья в паре метров от земли помечены медвежьими
           когтями. Чтобы все знали, кто тут хозяин.
         </p>
-      </div>
+      </section>
     </article>
   </section>
 
   <a class="cover" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-    <div class="cover__txt">
+    <section class="cover__txt">
       <h2 class="cover__title">
         До Байкала «на собаках»
       </h2>
       <h3 class="cover__subtitle">
         По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
       </h3>
-    </div>
+    </section>
     <img class="cover__background"
          src="./images/cover-trains.jpg" alt="Обложка Байкал">
-    <div class="cover__overlay"></div>
+    <section class="cover__overlay"></section>
   </a>
 
-  <!-- <footer class="footer red-border">
-    Подвал
-  </footer> -->
+  <footer class="footer">
+    <section class="footer__links">
+      <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+      <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+      <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+      <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+      <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+    </section>
+    <section class="footer__copyright">
+      2023. Илюшин Григорий
+    </section>
+  </footer>
 </body>
 </html>
