--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       интересные места, достойные вашего отпуска.
     </p>
     <ul class="intro__list">
-      <li>Часовых поясов <span class="intro__list_thin">11</span></li>
-      <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_thin">12</span></li>
-      <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_thin">16</span></li>
-      <li>Природных заповедников <span class="intro__list_thin">105</span></li>
-      <li>Аэропортов <span class="intro__list_thin">241</span></li>
+      <li>Часовых поясов <span class="intro__list_thin_yes">11</span></li>
+      <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_thin_yes">12</span></li>
+      <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_thin_yes">16</span></li>
+      <li>Природных заповедников <span class="intro__list_thin_yes">105</span></li>
+      <li>Аэропортов <span class="intro__list_thin_yes">241</span></li>
     </ul>
   </section>
 
