исправление ошибок автотеста #2

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body class="page">
   <header class="header">
-    <section class="header__logo"></section>
-    <section class="header__lang-link">
+    <div class="header__logo"></div>
+    <div class="header__lang-link">
       <a class="header__nic" href="#">Ru</a>
       <a class="header__nic" href="#">En</a>
-    </section>
+    </div>
   </header>
   <section class="lead">
     <h1 class="lead__title">Путешествия по России</h1>
@@ -44,7 +44,7 @@
         Часовых поясов <span class="intro__list-item intro__list-item_thin_yes">11</span>
       </li>
       <li class="intro__list-item">
-        Объектов природного наследия ЮНЕСКО <span class="intro__list-item intro__list-item_thin_yes"">12</span>
+        Объектов природного наследия ЮНЕСКО <span class="intro__list-item intro__list-item_thin_yes">12</span>
       </li>
       <li class="intro__list-item">
         Объектов культурного наследия ЮНЕСКО <span class="intro__list-item intro__list-item_thin_yes">16</span>
@@ -90,13 +90,13 @@
   <section class="places">
     <article class="place">
       <h2 class="place__title">Куршская коса</h2>
-      <section class="place__vebsite">
+      <div class="place__vebsite">
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
-      </section>
+      </div>
       <img class="place__image"
           src="./images/place-kosa.jpg" alt="Коса">
-      <section>
+      <div>
         <p class="place__paragraph">
           Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
           спокойного Куршского залива с одной стороны и подёрнутого рябью волн
@@ -108,18 +108,18 @@
           коса, — и немецкое наследие россыпи небольших приморских городов.
           Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
         </p>
-      </section>
+      </div>
     </article>
 
     <article class="place">
       <h2 class="place__title">Кольский</h2>
-      <section class="place__vebsite">
+      <div class="place__vebsite">
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
-      </section>
+      </div>
       <img class="place__image"
           src="./images/place-kolsky.jpg" alt="Кольский">
-      <section>
+      <div>
         <p class="place__paragraph">
           Почти весь полуостров находится за Полярным кругом.
           Саамская тундра, от которой на юг — тайга, а на север —
@@ -133,18 +133,18 @@
           давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает
           сбываться с билетом в Мурманск.
         </p>
-      </section>
+      </div>
     </article>
 
     <article class="place">
       <h2 class="place__title">Алтай</h2>
-      <section class="place__vebsite">
+      <div class="place__vebsite">
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
-      </section>
+      </div>
       <img class="place__image"
           src="./images/place-altai.jpg" alt="Алтай">
-      <section>
+      <div>
         <p class="place__paragraph">
           Алтай — одно из красивейших мест в России.
           В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны,
@@ -157,18 +157,18 @@
           бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули.
           И знаменитые манулы — тоже обитатели Алтайского края.
         </p>
-      </section>
+      </div>
     </article>
 
     <article class="place">
       <h2 class="place__title">Зимний Байкал</h2>
-      <section class="place__vebsite">
+      <div class="place__vebsite">
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
-      </section>
+      </div>
       <img class="place__image"
           src="./images/place-winter-baikal.jpg" alt="Байкал">
-      <section>
+      <div>
         <p class="place__paragraph">
           Всем известен Байкал как крупнейшее озеро в мире. Многие
           также знают, что это самый большой источник пресной воды
@@ -181,18 +181,18 @@
           В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой
           рекорд — 197.011 км/ч.
         </p>
-      </section>
+      </div>
     </article>
 
     <article class="place">
       <h2 class="place__title">Карелия</h2>
-      <section class="place__vebsite">
+      <div class="place__vebsite">
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
-      </section>
+      </div>
       <img class="place__image"
            src="./images/place-karelia.jpg" alt="Карелия">
-      <section>
+      <div>
         <p class="place__paragraph">
           Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
           лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на
@@ -203,7 +203,7 @@
           А на редких тропинках деревья в паре метров от земли помечены медвежьими
           когтями. Чтобы все знали, кто тут хозяин.
         </p>
-      </section>
+      </div>
     </article>
   </section>
 
@@ -218,20 +218,20 @@
     </section>
     <img class="cover__background"
          src="./images/cover-trains.jpg" alt="Обложка Байкал">
-    <section class="cover__overlay"></section>
+    <div class="cover__overlay"></div>
   </a>
 
   <footer class="footer">
-    <section class="footer__links">
+    <div class="footer__links">
       <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
       <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
       <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
       <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
       <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-    </section>
-    <section class="footer__copyright">
+    </div>
+    <div class="footer__copyright">
       2023. Илюшин Григорий
-    </section>
+    </div>
   </footer>
 </body>
 </html>
