--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   <header class="header">
     <div class="header__logo"></div>
     <div class="header__lang-link">
-      <a class="header__nic" href="#">Ru</a>
+      <a class="header__nic header__nic_active_yes" href="#">Ru</a>
       <a class="header__nic" href="#">En</a>
     </div>
   </header>
   <section class="lead">
     <h1 class="lead__title">Путешествия по России</h1>
-    <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+    <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
     <img class="lead__image"
          src="./images/lead-polka.jpg" alt="Маршрут">
-    <h3 class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</h3>
+    <p class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</p>
   </section>
 
   <section class="intro">
@@ -212,9 +212,9 @@
       <h2 class="cover__title">
         До Байкала «на собаках»
       </h2>
-      <h3 class="cover__subtitle">
+      <p class="cover__subtitle">
         По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
-      </h3>
+      </p>
     </section>
     <img class="cover__background"
          src="./images/cover-trains.jpg" alt="Обложка Байкал">
@@ -222,16 +222,16 @@
   </a>
 
   <footer class="footer">
-    <div class="footer__links">
+    <nav class="footer__links">
       <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
       <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
       <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
       <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
       <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-    </div>
-    <div class="footer__copyright">
+    </nav>
+    <p class="footer__copyright">
       2023. Илюшин Григорий
-    </div>
+    </p>
   </footer>
 </body>
 </html>
