работа над ошибками r1p2

--- a/index.html
+++ b/index.html
@@ -207,19 +207,15 @@
     </article>
   </section>
 
-  <a class="cover" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-    <section class="cover__txt">
-      <h2 class="cover__title">
-        До Байкала «на собаках»
-      </h2>
+  <section class="cover">
+    <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+      <h2 class="cover__title">До Байкала</h2>
+      <h2 class="cover__title">«на собаках»</h2>
       <p class="cover__subtitle">
         По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
       </p>
-    </section>
-    <img class="cover__background"
-         src="./images/cover-trains.jpg" alt="Обложка Байкал">
-    <div class="cover__overlay"></div>
-  </a>
+    </a>
+  </section>
 
   <footer class="footer">
     <nav class="footer__links">
