--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <section class="places">
       <article class="place">
         <h2 class="place__title">Куршская коса</h2>
-        <div class="place__vebsite">
+        <div class="place__vebsite red-border">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
         </div>
