работа над ошибками r2p2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Путешествие</title>
 </head>
 <body class="page">
-  <main class="content red-border">
+  <main class="content">
     <header class="header">
       <div class="header__logo"></div>
       <div class="header__lang-link">
@@ -92,7 +92,7 @@
     <section class="places">
       <article class="place">
         <h2 class="place__title">Куршская коса</h2>
-        <div class="place__vebsite red-border">
+        <div class="place__vebsite">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
         </div>
